--- a/frontend/index.html
+++ b/frontend/index.html
@@ -324,7 +324,7 @@
         loadEntries();
         loadStats();
         
-        // Uppdatera var 30:e sekund
+        // Uppdatera var 30:e sekun
         setInterval(() => {
             loadEntries();
             loadStats();
